Fixing code block alignment

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -7,7 +7,7 @@ pre {
     padding:30px;
     max-width:80%;
     border-radius:10px;
-    margin:20px 0 20px 10%;
+    margin:20px;
     font-size: .9em;
     color: $white;
     line-height: 1.5em;
